# muzkaw

./: .clang-format  .gitignore  CMakeLists.txt  README.md
ElectroStat/: Button.cpp  Button.h  CMakeLists.txt  Charge.cpp  Charge.h  Point.cpp  Point.h  Slider.cpp  Slider.h  Utility.cpp  Utility.h  main.cpp
FFT2/: CMakeLists.txt  FFT.cpp  FFT.h  main.cpp
Graph/: CMakeLists.txt  DebugGraph.cpp  DebugGraph.h  Graph.cpp  Graph.h  InputGraph.cpp  InputGraph.h  OutputGraph.cpp  OutputGraph.h  Utility.cpp  Utility.h  cfg.txt  cfg2.txt  main.cpp
ParticlePursuers/: CMakeLists.txt  Particle.cpp  Particle.h  Slider.cpp  Slider.h  Utility.cpp  Utility.h  main.cpp
scripts/: clang-format-all.ps1
